--- a/PrototypePattern/PrototypePattern.csproj
+++ b/PrototypePattern/PrototypePattern.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EAF53405-A08A-4FAF-BF62-2D9AA4B7702A}</ProjectGuid>
+    <ProjectGuid>{7E36BB1D-CFCE-4626-A355-54CB3A591237}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DesignPatterns</RootNamespace>
-    <AssemblyName>DesignPatterns</AssemblyName>
+    <RootNamespace>PrototypePattern</RootNamespace>
+    <AssemblyName>PrototypePattern</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicCar.cs" />
-    <Compile Include="Singlton.cs" />
+    <Compile Include="Ford.cs" />
+    <Compile Include="Nano.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
